<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Strings common for all activities -->
    <string name="app_name">Pass Keeper</string>

    <!-- Login Activity -->
    <string name="login_activity_title">Welcome</string>
    <string name="prompt_password">Password</string>
    <string name="add_user">Add user</string>
    <string name="delete_user">Delete user</string>

    <!-- Main activity strings -->
    <string name="title_activity_main">Passwords</string>
    <string name="add_folder">Add folder</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="exit_warn">Click once more to exit.</string>
    <string name="edit_folder">Edit folder</string>
    <string name="edit_user">Edit user</string>
    <string name="paste">Paste</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Common Dialog strings -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- Entry Dialog -->
    <string name="comment">Comment</string>
    <string name="url">URL</string>
    <string name="login">Login</string>
    <string name="msg_clipboard">Copied to clipboard</string>
    <string name="long_press_for_pass">Long press for strong password.</string>
    <!-- New user Dialog strings -->
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <!-- New category Dialog strings -->
    <string name="new_folder">New folder</string>
    <string name="success">Success.</string>
    <string name="delete_folder">Delete folder</string>
    <string name="unlock_first">Unlock first!</string>
    <string name="delete_selected_items" tools:ignore="PluralsCandidate">Delete selected %d item(s)?</string>
    <string name="select_zip">Select zip file with backup</string>
    <string name="no_file_selected">No file selected</string>
    <string name="unzip_error">Unzip failed</string>
    <string name="unable_to_read_content">Unable to read contents</string>
    <string name="file_not_found">File not found</string>
    <string name="file_io_error">File I/O error</string>
    <string name="db_not_found">DB not found on SD card</string>
    <string name="sign_in_problems">Google SignIn problems!</string>
    <string name="unable_to_open_file">Unable to open file</string>
    <string name="backup_saved_to_sd">Backup saved to SD card</string>
    <string name="failed_to_create_new_contents_on_drive">Failed to create new contents on Drive.</string>
    <string name="short_pass">Password too short</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="name_is_too_short">Too short name</string>
    <string name="wrong_password">Password is wrong</string>
    <string name="default_folder_forums">Forums</string>
    <string name="default_folder_credits">Credit cards</string>
    <string name="default_folder_emails">Mailboxes</string>
    <string name="default_folder_shops">Online shops</string>
    <string name="change_password">Change password</string>
    <string name="rate_application">Rate application</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enable_fingerprint">Enable fingerprint</string>

    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="logout">Logout</string>
</resources>
