<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_user"
        android:title="@string/add_user"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_delete_user"
        android:title="@string/delete_user"
        android:orderInCategory="101"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_rate"
        android:title="@string/rate_application"
        android:orderInCategory="102"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/privacy_policy"
        android:orderInCategory="104"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_use_fingerprint"
        android:titleCondensed="Persist"
        android:title="@string/enable_fingerprint"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="99"
        app:showAsAction="never"
        />
</menu>